force-app/main/default/objects/Transaction_Log__c/fields/Batch_Process__c.field-meta.xml
<CustomField>
    <fullName>Batch_Process__c</fullName>
    <label>Batch Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICRA_Generate_Proforma_Invoice_Batch</fullName>
            </value>
            <value>
                <fullName>ICRA_Generate_Tax_Invoice_Batch</fullName>
            </value>
            <value>
                <fullName>ICRA_CreateRollover_T_Logic</fullName>
            </value>
            <value>
                <fullName>ICRA_CreateRollover_T_Logic_Manual</fullName>
            </value>
            <value>
                <fullName>ICRA_Invoice_Status_Update_Batch</fullName>
            </value>
            <value>
                <fullName>ICRA CreateRollover T Logic</fullName>
                <isActive>false</isActive>
                <label>ICRA CreateRollover T Logic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>