force-app/main/default/objects/Transaction_Log__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Transaction Logs</relationshipLabel>
    <relationshipName>Transaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>