force-app/main/default/objects/Transaction_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>to store the type of operation</description>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>